# rps13-adaptive-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_local.bat
configs/: app.web.yaml.example  app.yaml  default.yaml  eval_v2.yaml  train_predictor.yaml  train_predictor_human.yaml  train_predictor_robust.yaml  train_rl.yaml
data/processed/: README.md
data/raw/: README.md
data/synthetic/: README.md
docs/: inference_pipeline.d2  inference_pipeline.mmd
models/: README.md
releases/: README.md
releases/cachipunaa-v1.0.0/: MANIFEST.json  README.txt
releases/cachipunaa-v1.0.0/metrics/: evaluation.csv  evaluation_actor_critic.csv  predictor_metrics.json  predictor_robust_metrics.json  rl_metrics.json
releases/cachipunaa-v2.0.0/: MANIFEST.json  MODEL_CARD.md  README.txt
releases/cachipunaa-v2.0.0/metrics/: evaluation_robust.csv  evaluation_v2.csv  human_logs_summary.json  predictor_human_ft_metrics.json
releases/templates/: MODEL_CARD-v1.0.0.md
reports/.matplotlib/: fontlist-v3.11.0.json
scripts/: aggregate_human_logs.py  combine_datasets.py  evaluate.py  finetune_predictor_human.py  generate_synthetic_data.py  open_when_ready.py  package_release.py  plot_inference_architecture.py  plot_inference_summary.py  prepare_rps_data.py  render_inference_d2.py  render_inference_mermaid.py  run_app.py  show_metrics.py  train_predictor.py  train_rl.py
src/rps13/: __init__.py  constants.py
tests/: test_bots.py  test_env.py  test_features.py  test_mixture_agent.py  test_predictor_shapes.py  test_rules.py  test_session_memory.py
(+44 files in other folders)
