[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rps13-adaptive-agent"
version = "0.1.0"
description = "Adaptive deep learning and reinforcement learning agent for first-to-13 rock paper scissors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "fastapi",
  "uvicorn",
  "numpy",
  "pandas",
  "pydantic",
  "PyYAML",
  "matplotlib",
  "scikit-learn",
  "rdata",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
